--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "pteroly",
-  "version": "0.6.1",
+  "version": "1.0.0",
   "description": "A Node.JS API wrapper for the Pterodactyl Panel",
   "main": "Pteroly.js",
   "dependencies": {
     "axios": "^0.24.0",
-    "follow-redirects": "^1.14.5"
+    "follow-redirects": "^1.14.5",
+    "ws": "^8.2.3"
   },
   "scripts": {
     "test": "echo \"No test specified\""
