--- a/package.json
+++ b/package.json
@@ -1,13 +1,37 @@
 {
   "name": "pteroly",
-  "version": "1.0.0",
-  "dependencies": {
-    "@redocly/openapi-cli": "^1.0.0-beta.75"
-  },
-  "private": true,
+  "version": "1.3.2",
+  "description": "A Node.JS API wrapper for the Pterodactyl Panel",
+  "main": "lib/pteroly.js",
+  "types": "lib/pteroly.d.ts",
+  "funding": "https://paypal.me/PureNodes",
   "scripts": {
-    "start": "openapi preview-docs",
-    "build": "openapi bundle -o dist",
-    "test": "openapi lint"
+    "test": "echo \"No test specified\""
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/EiskalterFreund/pteroly.git"
+  },
+  "keywords": [
+    "api",
+    "wrapper",
+    "pterodactyl",
+    "panel",
+    "node.js",
+    "nodejs"
+  ],
+  "author": "EiskalterFreund",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/EiskalterFreund/pteroly/issues"
+  },
+  "homepage": "https://pteroly.purenodes.net/",
+  "dependencies": {
+    "@types/node": "^17.0.5",
+    "axios": "^0.24.0",
+    "follow-redirects": "^1.14.5",
+    "fs": "^0.0.1-security",
+    "typescript": "^4.5.4",
+    "ws": "^8.2.3"
   }
 }
