--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@
 dist
 node_modules
 lib
+bug_report.md
+feature_request.md
+.github/workflows/codeql-analysis.yml
+.github/ISSUE_TEMPLATE/feature_request.md
+.github/workflows/codeql-analysis.yml
