--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ feature_request.md
 .github/workflows/codeql-analysis.yml
 .github/ISSUE_TEMPLATE/feature_request.md
 .github/workflows/codeql-analysis.yml
+.github
