--- a/src/config.cfg
+++ b/src/config.cfg
@@ -1,7 +1,7 @@
 # DON'T TOUCH THE MAJORNOTIFY CONFIG. (Automatically generated)
-# THIS CONFIG FILE IS SPACE AND NAME SENSITIVE, EDITING IT IN THE WRONG WAY POSSIBLY BREAKS IT.
+# THIS CONFIG FILE IS SPACE, LINE AND NAME SENSITIVE, EDITING IT IN THE WRONG WAY POSSIBLY BREAKS IT.
 MAJORNOTIFY:
-  V=2
+  versionNumber=2
   shown=no
 
 VERSIONNOTIFY:
