--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "types": "lib/pteroly.d.ts",
   "funding": "https://paypal.me/PureNodes",
   "scripts": {
-    "build": "tsc",
-    "start": "tsc && node lib/pteroly.js"
+    "build": "tsc && copy .\\src\\config.cfg .\\lib\\config.cfg",
+    "start": "tsc && cd .\\lib && node pteroly.js"
   },
   "repository": {
     "type": "git",
