--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "funding": "https://paypal.me/PureNodes",
   "scripts": {
     "build": "tsc && copy .\\src\\config.cfg .\\lib\\config.cfg",
-    "start": "tsc && cd .\\lib && node pteroly.js"
+    "start": "tsc && cd .\\lib && node pteroly.js",
+    "lint": "eslint . --ext .ts"
   },
   "repository": {
     "type": "git",
@@ -39,5 +40,10 @@
     "fs": "^0.0.1-security",
     "typescript": "^4.6.2",
     "ws": "^8.5.0"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.28.0",
+    "@typescript-eslint/parser": "^5.28.0",
+    "eslint": "^8.18.0"
   }
 }
