--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pteroly",
-  "version": "1.8.3",
+  "version": "1.8.4",
   "description": "A fast typescript Node.JS API wrapper for the Pterodactyl Panel working with the latest version and with lots of features",
   "main": "lib/pteroly.js",
   "types": "lib/pteroly.d.ts",
@@ -8,7 +8,8 @@
   "scripts": {
     "build": "tsc && copy .\\src\\config.cfg .\\lib\\config.cfg",
     "start": "tsc && cd .\\lib && node pteroly.js",
-    "lint": "eslint . --ext .ts"
+    "lint": "eslint . --ext .ts",
+    "test": "ts-mocha -p tsconfig.json src/application/** src/client/**"
   },
   "repository": {
     "type": "git",
@@ -42,8 +43,12 @@
     "ws": "^8.5.0"
   },
   "devDependencies": {
+    "@types/expect": "^24.3.0",
+    "@types/mocha": "^9.1.1",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
     "@typescript-eslint/parser": "^5.28.0",
-    "eslint": "^8.18.0"
+    "eslint": "^8.18.0",
+    "mocha": "^10.0.0",
+    "ts-mocha": "^10.0.0"
   }
 }
