--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "homepage": "https://pteroly.fyreblitz.com/",
   "dependencies": {
     "@types/node": "^17.0.21",
+    "dotenv": "^16.0.1",
     "follow-redirects": "^1.14.9",
     "fs": "^0.0.1-security",
     "node-fetch": "^3.2.8",
