--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,6 +27,6 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm i -g typescript
-    - run: npm ci
-    - run: npm run build --if-present
+    - run: npm i
+    - run: npm run buildandcopy --if-present
     - run: npm test
