--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "axios": "^0.26.1",
     "follow-redirects": "^1.14.9",
     "fs": "^0.0.1-security",
+    "node-fetch": "^3.3.0",
     "node-ts-cache": "^4.4.0",
     "node-ts-cache-storage-memory": "^4.4.0",
     "typescript": "^4.6.2",
