--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "homepage": "https://pteroly.fyreblitz.com/",
   "dependencies": {
     "@types/node": "^18.11.9",
+    "@types/ws": "^8.5.3",
     "axios": "^0.26.1",
     "follow-redirects": "^1.14.9",
     "fs": "^0.0.1-security",
