--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "node-fetch": "^3.3.0",
     "node-ts-cache": "^4.4.0",
     "node-ts-cache-storage-memory": "^4.4.0",
-    "typescript": "^4.6.2",
     "ws": "^8.11.0"
   },
   "devDependencies": {
@@ -54,6 +53,8 @@
     "@typescript-eslint/parser": "^5.28.0",
     "eslint": "^8.18.0",
     "mocha": "^10.0.0",
-    "ts-mocha": "^10.0.0"
+    "ts-mocha": "^10.0.0",
+    "typescript": "^4.6.2",
+    "ts-node": "^10.4.0"
   }
 }
