--- a/package.json
+++ b/package.json
@@ -48,14 +48,13 @@
     "ws": "^8.11.0"
   },
   "devDependencies": {
-    "@types/expect": "^24.3.0",
     "@types/mocha": "^9.1.1",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
     "@typescript-eslint/parser": "^5.28.0",
     "eslint": "^8.18.0",
     "mocha": "^10.0.0",
     "ts-mocha": "^10.0.0",
-    "typescript": "^4.6.2",
-    "ts-node": "^10.4.0"
+    "ts-node": "^10.4.0",
+    "typescript": "^4.6.2"
   }
 }
